syntax = "proto3";

package goclub.engine.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
//import "google/protobuf/timestamp.proto";
import "common.proto";

option go_package = "goclub/engine/v1;api";


service Tarifs {
        rpc TarifCreate(TarifCreateRequest) returns (TarifCreateResponse)  {
            option (google.api.http) = {
                post: "/api/v1/tarifs"
                body: "*"
            };
        }
    
        rpc TarifUpdate(TarifUpdateRequest) returns (TarifUpdateResponse) {
            option (google.api.http) = {
                put: "/api/v1/tarifs/{object.id}"
                body: "*"
            };
        }
    
        rpc TarifDelete(TarifDeleteRequest) returns (TarifDeleteResponse)  {
            option (google.api.http) = {
                delete: "/api/v1/tarifs/{id}"
            };
        }
    
        rpc TarifRead(TarifReadRequest) returns (TarifReadResponse)  {
            option (google.api.http) = {
                get: "/api/v1/tarifs/{id}"
            };
        }
        rpc   TarifListing(  TarifListingRequest) returns (  TarifListingResponse)  {
            option (google.api.http) = {
                get: "/api/v1/tarifs"
            };
        }
    }
    
   

    message TarifInfo {
        int64 id = 1;
        string name = 2 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 100];
        Date start_date = 3;
        Date end_date = 4;
    }
    
    // Creating
    message TarifCreateRequest {
        TarifInfo object = 1;
    }
    
    message TarifCreateResponse {
        CRUDResult crud_result = 1;
        TarifInfo object = 2;
    }
    
    // Updating
    message TarifUpdateRequest {
        TarifInfo object = 1;
    }
    
    message TarifUpdateResponse   {
        CRUDResult crud_result = 1;
        TarifInfo object = 2;
    }
    
    // Deleting
    message TarifDeleteRequest {
        int64 id = 1;
    }
    
    message TarifDeleteResponse {
        CRUDResult crud_result = 1;
    }
    
    message TarifReadRequest {
        int64 id = 1;
    }
    
    message TarifReadResponse {
        CRUDResult crud_result = 1;
        TarifInfo object = 2;
    }
    
    message  TarifListingRequest {
    }
    
    message  TarifListingResponse  {
        CRUDResult crud_result = 1;
        repeated TarifInfo objects = 2;
    }
    
    